2005-01-08  Martin Blom  <martin@blom.org>

	* Try harder to satisfy outstanding CBD_POST requests at exit
	(window close gadget, CTRL-C), using real Windows clipboard data
	if possible.

2005-01-07  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (07.01.2005).

	* If we have an outstanding clipboard.device CBD_POST when we
	exit, just wite empty data to the clipboard to satisfy it.

	* Don't change cursor image in Amithlon (since it's broken).

2005-01-06  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (06.01.2005).

	* Fixed some minor bugs in the clipboard handling code.

2005-01-05  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (05.01.2005).

	* Added hatch patterns to ui_patblt().

	* The pattern in ui_patblt() seems to be inverted. This fixes the
	missing grid in Microsoft Outlook and also made the lasso in
	Explorer appear.

	* Picasso96 and CyberGraphX do not handle minterm 0x00 or 0xf0
	correctly. :-( Detect this and use RectFill() instead. This fixes
	bad colors in Microsoft Outlook.

	* Avoid 'ERROR: send: Bad file descriptor' when terminating
	RDesktop while audio is streaming.

2004-12-30  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (30.12.2004).

	* Finished clipboard support. It requires clipboard.device 50.2 or
	higher in MorphOS!
    
2004-12-19  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (19.12.2004).

	* Ported RDesktop to (optionally) use libnix instead of ixemul. It
	works both for m68k-amigaos and ppc-morphos.

2004-12-11  Martin Blom  <martin@blom.org>

	* printercache.c: Use ENVARC:, not $HOME.

2004-05-30  Martin Blom  <martin@blom.org>

	* Released version 1.3.1cvs (30.05.2004).

	* When connecting to a Windows Server, the path for the client
	license was ENVARC:RDesktop/RDesktop/licence.<host>. Changed to
	ENVARC:RDesktop/license.<host>, as that's what the ReadMe file
	says. Sorry chaps.

2004-05-28  Martin Blom  <martin@blom.org>
